<resources>
    <string name="app_name">Promo Application</string>
    <string name="text_contact_name">Contact Name</string>
    <string name="text_contact_number">Contact Number</string>
    <string name="text_display_name">Display Name</string>
    <string name="check_box_include_junior">Include Junior</string>
    <string name="check_box_immediate_start">Immediate Start</string>
    <string name="text_available_date">Available from date</string>
    <string name="button_preview_message">Preview Message</string>
    <string name="button_send_message">Send Message</string>

</resources>